fixed leaderboard distort

--- a/styles/Leaderboard/Leaderboard.module.css
+++ b/styles/Leaderboard/Leaderboard.module.css
@@ -7,7 +7,8 @@
 }
 
 .table {
-  border-collapse: collapse;
+  /* border-collapse: collapse; */
+  border-spacing: 0;
 }
 
 .tableHeader > * {
@@ -16,7 +17,7 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 
-.tableBody > *:first-child {
+.tableBody > td:first-child {
   display: flex;
   align-items: center;
   justify-content: center;
